next initial commit

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <p class="lead">We Supply Birds on a one-month-old, running immediate Eggs.</p>
           </div>
           <div class="col-md-5 Aboutimgsect">
-            <img src="/nativehen.jpg" alt="about img" class="AboutImg">
+            <img src="nativehen.jpg" alt="about img" class="AboutImg">
           </div>
         </div>
       </div>
@@ -110,7 +110,7 @@
           </div>
           <div class="col-md-5 Aboutimgsect">
 
-            <img src="/eggs3.jpg" alt="about img" class="AboutImg">
+            <img src="eggs3.jpg" alt="about img" class="AboutImg">
           </div>
         </div>
       </div>
@@ -129,7 +129,7 @@
 
         <div class="cardCont">
           <div class="card" style="width: 18rem;">
-            <img src="/feeder.jpg" class="card-img-top imgCard" alt="...">
+            <img src="feeder.jpg" class="card-img-top imgCard" alt="...">
             <div class="card-body">
               <h5 class="card-title">Poultry Feeder & Drinker</h5>
               <p class="card-text">Supply Poultry Feedera & drinkers at WholeSale Rates</p>
@@ -138,7 +138,7 @@
           </div>
 
           <div class="card" style="width: 18rem;">
-            <img src="/hens.jpg" class="card-img-top imgCard" alt="...">
+            <img src="hens.jpg" class="card-img-top imgCard" alt="...">
             <div class="card-body">
               <h5 class="card-title">Chicken Feed</h5>
               <p class="card-text">Provide You Chicken and Also Provide Their Feed.</p>
@@ -147,7 +147,7 @@
           </div>
 
           <div class="card" style="width: 18rem;">
-            <img src="/brooder.jpg" class="card-img-top imgCard" alt="...">
+            <img src="brooder.jpg" class="card-img-top imgCard" alt="...">
             <div class="card-body">
               <h5 class="card-title">Gas Brooder & Electronic Brooder</h5>
               <p class="card-text">Supply
@@ -159,7 +159,7 @@
         </div>
         <div class="cardCont2 container">
           <div class="card" style="width: 18rem;">
-            <img src="/vaccine.webp" class="card-img-top imgCard" alt="...">
+            <img src="vaccine.webp" class="card-img-top imgCard" alt="...">
             <div class="card-body">
               <h5 class="card-title">Chicken Vaccination</h5>
               <p class="card-text">Chickens Which get Vaccinated within 1 | 15 | 30 days.
@@ -169,7 +169,7 @@
           </div>
 
           <div class="card" style="width: 18rem;">
-            <img src="/support.jpg" class="card-img-top imgCard" alt="...">
+            <img src="support.jpg" class="card-img-top imgCard" alt="...">
             <div class="card-body">
               <h5 class="card-title">Support For new Poultry Farm</h5>
               <p class="card-text">Will provide Material regards to New Poultry farm and Give Relavent Guidelines Also.
@@ -178,7 +178,7 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="/price.jpg" class="card-img-top imgCard" alt="...">
+            <img src="price.jpg" class="card-img-top imgCard" alt="...">
             <div class="card-body">
               <h5 class="card-title">Lowest Rates From Market</h5>
               <p class="card-text">Our Products Get Lowest Prices Apart from Market. That provide Value.
@@ -195,52 +195,6 @@
   </section>
   <hr>
   <section id="orderNow">
-    <!-- <div class="orderhead">
-      <h1 class="orderh1">Order Now!
-      </h1>
-    </div>
-    <hr>
-    <div class="orderSlogn">Think Chicken? Think us.</div>
-    <div class="orderMain">
-      <div class="orderBoxes">
-        <div class="orderBox">
-          <img src="/eggs.jpg" alt="" class="orderImg" id="orderEgg">
-          <div class="orderPara">
-            Order Native Eggs
-
-            <div class="orderBtn">
-              <button class="btn btn-outline-success">Order Now!</button>
-            </div>
-          </div>
-        </div>
-
-        <div class="orderBox">
-          <img src="/chickens.jpg" alt="" class="orderImg" id="orderEgg">
-          <div class="orderPara">
-            Original Native Chicken
-
-            <div class="orderBtn">
-              <button class="btn btn-outline-success">Order Now!</button>
-            </div>
-          </div>
-        </div>
-
-        <div class="orderBox">
-          <img src="/hens.jpg" alt="" class="orderImg" id="orderChicken">
-          <div class="orderPara">
-            Order Bird's Feed
-
-            <div class="orderBtn">
-              <button class="btn btn-outline-success">Order Now!</button>
-            </div>
-          </div>
-        </div>
-
-
-      </div>
-    </div> -->
-
-
     <div class="container px-4 py-5" id="custom-cards">
       <h2 class="pb-2 border-bottom">Order Your Mind</h2>
 
@@ -251,7 +205,7 @@
               <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Native Eggs</h2>
               <ul class="d-flex list-unstyled mt-auto">
                 <li class="me-auto">
-                  <img src="/logo.jpg" alt="Bootstrap" width="32" height="32"
+                  <img src="logo.jpg" alt="Bootstrap" width="32" height="32"
                     class="rounded-circle border border-white">
                 </li>
                 <div class="orderCardsect">
@@ -268,7 +222,7 @@
               <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Bird's Feed</h2>
               <ul class="d-flex list-unstyled mt-auto">
                 <li class="me-auto">
-                  <img src="/logo.jpg" alt="Bootstrap" width="32" height="32"
+                  <img src="logo.jpg" alt="Bootstrap" width="32" height="32"
                     class="rounded-circle border border-white">
                 </li>
                 <div class="orderCardsect">
@@ -285,7 +239,7 @@
               <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Original native Chicken</h2>
               <ul class="d-flex list-unstyled mt-auto">
                 <li class="me-auto">
-                  <img src="/logo.jpg" alt="Bootstrap" width="32" height="32"
+                  <img src="logo.jpg" alt="Bootstrap" width="32" height="32"
                     class="rounded-circle border border-white">
                 </li>
                 <div class="orderCardsect">
