--- a/index.html
+++ b/index.html
@@ -267,13 +267,13 @@
               <label for="floatingInput">Email address</label>
             </div>
             <div class="form-floating">
-              <input type="number" class="form-control" id="floatingPassword" placeholder="Password">
-              <label for="floatingPassword">Phone Number</label>
+              <input type="text" class="form-control" id="floatingPassword" placeholder="name">
+              <label for="floatingPassword">Name</label>
             </div>
 
             <div class="form-floating">
               <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
-              <label for="floatingTextarea2">Comments</label>
+              <label for="floatingTextarea2">Message</label>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
