--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <nav class="navbar navbar-dark bg-dark sticky-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Kartik Agro</a>
+      <a class="navbar-brand" href="#"><div class="NavLogo"><img src="navLogo.jpg" alt="Chicken logo"></div> Kartik Agro</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
         aria-controls="offcanvasNavbar">
         <span class="navbar-toggler-icon"></span>
