Marathi Lang Update Commit

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
+  
+
   <link rel="shortcut icon" href="logo.jpg" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
   <title>Kartik Agro & Poultry Services</title>
@@ -65,8 +67,9 @@
         <h1 class="herohead">Wel-Come to Kartik Agro | Poultry Services</h1>
         <div class="herocontent">
           <p class="heropara">
-            We Provide Authentic chicken and Eggs with mesmerizing taste | <br>
-            Chickens with proper vaccination.
+            आम्ही मंत्रमुग्ध चवीसह अस्सल चिकन आणि अंडी देतो <br>
+              योग्य लसीकरण सह कोंबडी.
+
           </p>
         </div>
         <div class="buttonsCont">
@@ -90,9 +93,9 @@
       <div class="container">
         <div class="row featurette" id="AboutContainer">
           <div class="col-md-7" id="AboutFirst">
-            <h2 class="featurette-heading">Indian Game Breed.<span class="text-muted"> Supply Chicken Breeds with Proper
-                vaccination</span></h2>
-            <p class="lead">We Supply Birds on a one-month-old, running immediate Eggs.</p>
+            <h2 class="featurette-heading">गावरान (Original).<span class="text-muted">  आम्ही गावरान पक्षी पुरवठा कारतॊ.</span></h2>
+            <p class="lead">एका महिन्याचे,
+              चालु अंड्यावरील पक्षी.</p>
           </div>
           <div class="col-md-5 Aboutimgsect">
             <img src="nativehen.jpg" alt="about img" class="AboutImg">
@@ -105,8 +108,8 @@
       <div class="container">
         <div class="row featurette" id="AboutContainer2">
           <div class="col-md-7" id="AboutFirst">
-            <h2 class="featurette-heading">Native Egg's. <span class="text-muted">Organic Eggs</span></h2>
-            <p class="lead">We Provide Native Eggs | Boiler Eggs | mid-native Eggs Also.</p>
+            <h2 class="featurette-heading">गावरान अंडे. <span class="text-muted">| निम गावरण अंडे</span></h2>
+            <p class="lead">आम्ही देशी अंडी देतो | बॉयलर अंडी | निम गावरण अंडी देखील.</p>
           </div>
           <div class="col-md-5 Aboutimgsect">
 
@@ -131,8 +134,8 @@
           <div class="card" style="width: 18rem;">
             <img src="feeder.jpg" class="card-img-top imgCard" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Poultry Feeder & Drinker</h5>
-              <p class="card-text">Supply Poultry Feedera & drinkers at WholeSale Rates</p>
+              <h5 class="card-title">पोल्ट्री फीडर आणि पेय</h5>
+              <p class="card-text">घाऊक दरात पोल्ट्री फीडर आणि ड्रिंकर्सचा पुरवठा करनारॆ</p>
               <a href="#" class="btn btn-primary">Visit Now</a>
             </div>
           </div>
@@ -140,18 +143,28 @@
           <div class="card" style="width: 18rem;">
             <img src="hens.jpg" class="card-img-top imgCard" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Chicken Feed</h5>
-              <p class="card-text">Provide You Chicken and Also Provide Their Feed.</p>
+              <h5 class="card-title">पक्षी खादय</h5>
+              <p class="card-text">कोंबडी व त्यांचे खाद्य देखील</p>
+              <a href="#" class="btn btn-primary">Visit Now</a>
+            </div>
+          </div>
+          
+          <div class="card" style="width: 18rem;">
+            <img src="chick2.jpg" class="card-img-top imgCard" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">तयार पक्षी</h5>
+              <p class="card-text">तयार माल खरेदी व विक्री केला जाईल व मोकळ्या हवेतील वाढलेले शरीरासाठी उपयुक्त नैसर्गिक वाढेल गावरान चिकन मिळेल.</p>
               <a href="#" class="btn btn-primary">Visit Now</a>
             </div>
           </div>
 
+
           <div class="card" style="width: 18rem;">
             <img src="brooder.jpg" class="card-img-top imgCard" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Gas Brooder & Electronic Brooder</h5>
-              <p class="card-text">Supply
-                Gas Brooder and Electronic Brooder at Best Price.
+              <h5 class="card-title">
+                गॅस ब्रूडर आणि इलेक्ट्रॉनिक ब्रूडर</h5>
+              <p class="card-text">गॅस ब्रूडर आणि इलेक्ट्रॉनिक ब्रूडर सर्वोत्तम किमतीत.
               </p>
               <a href="#" class="btn btn-primary">Visit Now</a>
             </div>
@@ -161,27 +174,41 @@
           <div class="card" style="width: 18rem;">
             <img src="vaccine.webp" class="card-img-top imgCard" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Chicken Vaccination</h5>
-              <p class="card-text">Chickens Which get Vaccinated within 1 | 15 | 30 days.
+              <h5 class="card-title">कोंबडी लसीकरण</h5>
+              <p class="card-text">आपल्या येथे संपूर्ण लसीकरण केलेले निरोगी कोंबडीचे पिल्ले आणि खाण्यासाठी स्वच्छ चिकन, अंडे घरपोच मिळतील,
               </p>
               <a href="#" class="btn btn-primary">Visit Now</a>
             </div>
           </div>
 
           <div class="card" style="width: 18rem;">
-            <img src="support.jpg" class="card-img-top imgCard" alt="...">
+            <img src="quality.png" class="card-img-top imgCard" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Support For new Poultry Farm</h5>
-              <p class="card-text">Will provide Material regards to New Poultry farm and Give Relavent Guidelines Also.
+              <h5 class="card-title">100% शुद्ध</h5>
+              <p class="card-text">आम्ही क्वालिटीमध्ये कधीही तडजोड करत नाही
               </p>
               <a href="#" class="btn btn-primary">Visit Now</a>
             </div>
           </div>
+
+
+          <div class="card" style="width: 18rem;">
+            <img src="support.jpg" class="card-img-top imgCard" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">नविन पौल्ट्री संबंधी मार्गदर्शन</h5>
+              <p class="card-text">नवीन पोल्ट्री फार्मसाठी सामग्री प्रदान करु आणि संबंधित मार्गदर्शक तत्त्वे देखील दिलॆ जाईल.
+              </p>
+              <a href="#" class="btn btn-primary">Visit Now</a>
+            </div>
+          </div>
+
+
           <div class="card" style="width: 18rem;">
             <img src="price.jpg" class="card-img-top imgCard" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Lowest Rates From Market</h5>
-              <p class="card-text">Our Products Get Lowest Prices Apart from Market. That provide Value.
+              <h5 class="card-title">
+                मार्केटरेट  पेक्षा सगळ्यात स्वस्त</h5>
+              <p class="card-text">आमच्या उत्पादनांना बाजाराव्यतिरिक्त सर्वात कमी किमती मिळतात. ते मूल्य प्रदान करतात.
               </p>
               <a href="#" class="btn btn-primary">Visit Now</a>
             </div>
@@ -196,13 +223,14 @@
   <hr>
   <section id="orderNow">
     <div class="container px-4 py-5" id="custom-cards">
-      <h2 class="pb-2 border-bottom">Order Your Mind</h2>
+      <h2 class="pb-2 border-bottom">Order Our Products <span class="Fent">
+        (आमची उत्पादने ऑर्डर करा)</span></h2>
 
       <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
         <div class="col">
           <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg orderCard">
             <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-              <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Native Eggs</h2>
+              <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">गावरान अंडे</h2>
               <ul class="d-flex list-unstyled mt-auto">
                 <li class="me-auto">
                   <img src="logo.jpg" alt="Bootstrap" width="32" height="32"
@@ -219,7 +247,7 @@
         <div class="col">
           <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" id="orderCard2">
             <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-              <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Bird's Feed</h2>
+              <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">पशू खाद्य</h2>
               <ul class="d-flex list-unstyled mt-auto">
                 <li class="me-auto">
                   <img src="logo.jpg" alt="Bootstrap" width="32" height="32"
@@ -236,7 +264,7 @@
         <div class="col">
           <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" id="orderCard3">
             <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
-              <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Original native Chicken</h2>
+              <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Original गावरण कोंबडी </h2>
               <ul class="d-flex list-unstyled mt-auto">
                 <li class="me-auto">
                   <img src="logo.jpg" alt="Bootstrap" width="32" height="32"
@@ -257,7 +285,7 @@
     <div class="contactMain">
       <div class="contactCont">
         <div class="contactHead">
-          <h1>Contact us</h1>
+          <h1>Contact us <span class="Fent">(संपर्क साधा)</span></h1>
         </div>
         <hr>
         <div class="contactFormSect container">
@@ -265,6 +293,10 @@
             <div class="form-floating mb-3">
               <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
               <label for="floatingInput">Email address</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input type="number" class="form-control" id="floatingInput" placeholder="Phone Number">
+              <label for="floatingInput">Phone Number</label>
             </div>
             <div class="form-floating">
               <input type="text" class="form-control" id="floatingPassword" placeholder="name">
@@ -275,7 +307,7 @@
               <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
               <label for="floatingTextarea2">Message</label>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-outline-primary">Submit</button>
           </form>
         </div>
       </div>
