--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div class="container">
         <div class="row featurette" id="AboutContainer">
           <div class="col-md-7" id="AboutFirst">
-            <h2 class="featurette-heading">गावरान (Original).<span class="text-muted">  आम्ही गावरान पक्षी पुरवठा कारतॊ.</span></h2>
+            <h2 class="featurette-heading">गावरान (Original).<span class="text-muted">  आम्ही गावरान पक्षी पुरवठा करतॊ.</span></h2>
             <p class="lead">एका महिन्याचे,
               चालु अंड्यावरील पक्षी.</p>
           </div>
@@ -237,7 +237,7 @@
                     class="rounded-circle border border-white">
                 </li>
                 <div class="orderCardsect">
-                  <button class="btn-outline-light btn">Order Now!</button>
+                  <button class="btn-outline-light btn orderButton" id="orderButton">Order Now!</button>
                 </div>
               </ul>
             </div>
@@ -254,7 +254,7 @@
                     class="rounded-circle border border-white">
                 </li>
                 <div class="orderCardsect">
-                  <button class="btn-outline-light btn">Order Now!</button>
+                  <button class="btn-outline-light btn orderButton" id="orderButton1">Order Now!</button>
                 </div>
               </ul>
             </div>
@@ -271,7 +271,7 @@
                     class="rounded-circle border border-white">
                 </li>
                 <div class="orderCardsect">
-                  <button class="btn-outline-light btn">Order Now!</button>
+                  <button class="btn-outline-light btn orderButton" id="orderButton2">Order Now!</button>
                 </div>
               </ul>
             </div>
@@ -333,6 +333,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
+    <script src="logic.js"></script>
 </body>
 
 </html>
